# bazel_example

./: .gitignore
android_instrumentation_test/: .bazelrc  .gitignore  README.md  WORKSPACE
android_instrumentation_test/.aswb/: .bazelproject
android_instrumentation_test/src/main/java/com/example/bazel/: BUILD  JavaUtil.java
android_instrumentation_test/src/test/: AndroidManifest.xml  BUILD
android_instrumentation_test/src/test/java/com/example/unit/: BUILD.bazel  SimpleTest.java
android_local_test/: .bazelrc  .gitignore  WORKSPACE  bazel-android_local_test  bazel-bin  bazel-out  bazel-testlogs  bazelcache.psk  maven_install.json
android_local_test/.aswb/: .bazelproject
android_local_test/.ijwb/: .bazelproject
android_local_test/src/main/: BUILD
android_local_test/src/main/java/: AndroidManifest.xml
android_local_test/src/main/java/com/example/bazel/: ExampleKotlinClass.kt  MainActivity.java
android_local_test/src/main/java/com/example/test/: Classpath.java  ClasspathSuite.java  CustomSuite.java  TestSuiteBuilder.java
android_local_test/src/main/res/values/: strings.xml
android_local_test/src/test/: AndroidManifest.xml  BUILD
android_local_test/src/test/java/com/example/bazel/: BazelTestSuite.java  KotlinTest.kt  RoboTest.java  SimpleJunitTest.java
android_local_test/src/test/java/com/example/bazel/internal/: BazelTestSuite.java
simple/: .bazelrc  BUILD  README.md  WORKSPACE  proguard-rules.pro
simple/data/: BUILD.bazel  data.txt
simple/example/java/src/main/com/example/: BUILD.bazel  TestJavaBinary.java
